@@ -1,3 +1,12 @@
+2008-06-27  Martyn Russell  <martyn@imendio.com>
+
+	* src/libtracker-common/tracker-file-utils.[ch]:
+	* src/libtracker-common/tracker-config.c:
+	* src/libtracker-common/tracker-module-config.c: Added
+	tracker_path_evaluate_name() to convert $HOME and "~/foo" into
+	real paths. This is now used by the module config and the main
+	config module when loading directory strings or string lists.
+
 2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* src/tracker-indexer/Makefile.am: Fixed a LIBS in an INCLUDES
